--- a/app/views/servicegroups/_partials/action_bar.html
+++ b/app/views/servicegroups/_partials/action_bar.html
@@ -14,15 +14,15 @@
             </span>
         </a>
     </li>
-    <li ng-if="!edit" class="nav-item">
-        <a ng-click="onEdit()" class="nav-link text-muted" title="Click to edit service group">
+    <li ng-if="!edit" class="nav-item b-l p-l p-r">
+        <a ng-click="onEdit()" class="nav-link text-muted no-border" title="Click to edit service group">
             <span class="nav-text">
                 <i class="icon-pencil" aria-hidden="true"></i>
             </span>
         </a>
     </li>
-    <li ng-if="edit" class="nav-item">
-        <a ng-click="save()" class="nav-link text-muted" title="Click to save service group">
+    <li ng-if="edit" class="nav-item b-l p-l p-r">
+        <a ng-click="save()" class="nav-link text-muted no-border" title="Click to save service group">
             Save
         </a>
     </li>
