--- a/app/views/services/_partials/detail.html
+++ b/app/views/services/_partials/detail.html
@@ -58,6 +58,12 @@
                                 <div class="m-t-lg" title="Service Color">
                                     <color-picker ng-model="service.color">
                                     </color-picker>
+                                    <div class="m-t-lg">
+                                        <div class="form-group form-material floating">
+                                            <input title="Service Color" ng-disabled="!edit" ng-model="service.color" ng-required ng-minlength="1" type="text" name="color" class="form-control" />
+                                            <label title="Service Color" class="floating-label">Service Color(HEX)</label>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="m-t-lg" title="Service Description">
                                     <div class="form-group form-material floating">
@@ -69,8 +75,8 @@
                                 <div class="m-t-lg" title="External Reporting Method Support">
                                     <div class="form-group form-material floating">
                                         <div class="checkbox-custom checkbox-primary">
-                                          <input ng-show="edit" type="checkbox" ng-model="service.isExternal">
-                                          <label title="External Reporting Method Support">Support External Reporting Methods</label>
+                                            <input ng-show="edit" type="checkbox" ng-model="service.isExternal">
+                                            <label title="External Reporting Method Support">Support External Reporting Methods</label>
                                         </div>
                                     </div>
                                 </div>
