--- a/app/views/servicegroups/_partials/detail.html
+++ b/app/views/servicegroups/_partials/detail.html
@@ -32,6 +32,16 @@
                                         <label class="floating-label">Description</label>
                                     </div>
                                 </div>
+                                <div class="m-t-lg" title="Service Group Color">
+                                  <color-picker ng-model="servicegroup.color">
+                                  </color-picker>
+                                  <div class="m-t-lg">
+                                      <div class="form-group form-material floating">
+                                          <input title="Service Group Color" ng-disabled="!edit" ng-model="servicegroup.color" ng-required ng-minlength="1" type="text" name="color" class="form-control" />
+                                          <label title="Service Group Color" class="floating-label">Service Group Color(HEX)</label>
+                                      </div>
+                                  </div>
+                              </div>
                             </div>
                         </div>
                     </form>
