--- a/app/views/priorities/_partials/detail.html
+++ b/app/views/priorities/_partials/detail.html
@@ -28,6 +28,12 @@
                                 <div class="m-t-lg" title="Priority Color">
                                     <color-picker ng-model="priority.color">
                                     </color-picker>
+                                    <div class="m-t-lg">
+                                      <div class="form-group form-material floating">
+                                          <input title="Priority Color" ng-disabled="!edit" ng-model="priority.color" ng-required ng-minlength="1" type="text" name="color" class="form-control" />
+                                          <label title="Priority Color" class="floating-label">Priority Color(HEX)</label>
+                                      </div>
+                                  </div>
                                 </div>
                             </div>
                         </div>
