restore inbox filter

--- a/app/views/servicerequests/_partials/side_subnav.html
+++ b/app/views/servicerequests/_partials/side_subnav.html
@@ -22,17 +22,22 @@
                     <div class="m-b text-muted text-xs">Miscellaneous</div>
                     <div class="nav-active-white">
                         <ul class="nav">
+                            <li ng-class="{active:!isEmpty(query) && query.operator == party._id}" class="nav-item m-b-xs">
+                                <a ng-click="load({operator:party._id, resetPage:true, reset:true})" class="nav-link text-muted block" title="My Pending Reported & Assigned Issues">
+                                Inbox
+                                </a>
+                            </li>
                             <li ng-class="{active:!isEmpty(query) && query.operator == null && query.resolvedAt == null && query.$or == null}" class="nav-item m-b-xs">
                                 <a show-if-has-permit="servicerequest:attend" ng-click="load({operator:null, resolvedAt:null, resetPage:true, reset:true})" class="nav-link text-muted block" title="Reported Issues Using Other Method Than Call Center">
                                 Un-Attended
                                 </a>
                             </li>
-                            <li ng-class="{active:!isEmpty(query) && query.operator != null && query.resolvedAt == null}" class="nav-item m-b-xs">
+                            <li ng-class="{active:!isEmpty(query) && query.operator != null && query.operator != party._id && query.resolvedAt == null}" class="nav-item m-b-xs">
                                 <a ng-click="load({resolvedAt:null, operator:{$ne:null}, resetPage:true, reset:true})" class="nav-link text-muted block" title="Reported Issues Currently Not Resolved">
                                 Un-Resolved
                                 </a>
                             </li>
-                            <li ng-class="{active:!isEmpty(query) && query.resolvedAt != null}" class="nav-item m-b-xs">
+                            <li ng-class="{active:!isEmpty(query) && query.resolvedAt != null && query.operator != party._id}" class="nav-item m-b-xs">
                                 <a ng-click="load({resolvedAt:{$ne:null}, operator:{$ne:null}, resetPage:true, reset:true})" class="nav-link text-muted block" title="Reported Issues That Have Been Resolved">
                                 Resolved
                                 </a>
