update inbox filter to show only pending & fix the conflict with other filters

--- a/app/views/servicerequests/_partials/side_subnav.html
+++ b/app/views/servicerequests/_partials/side_subnav.html
@@ -23,7 +23,7 @@
                     <div class="nav-active-white">
                         <ul class="nav">
                             <li ng-class="{active:!isEmpty(query) && query.operator == party._id}" class="nav-item m-b-xs">
-                                <a ng-click="load({operator:party._id, resetPage:true, reset:true})" class="nav-link text-muted block" title="My Pending Reported & Assigned Issues">
+                                <a ng-click="load({operator:party._id, resolvedAt:null, resetPage:true, reset:true})" class="nav-link text-muted block" title="My Pending Reported & Assigned Issues">
                                 Inbox
                                 </a>
                             </li>
