--- a/app/views/servicerequests/_partials/list.html
+++ b/app/views/servicerequests/_partials/list.html
@@ -22,8 +22,8 @@
                     <div ng-click="select(_servicerequest)" class="list-item list-item-padded" ng-class="{'active': _servicerequest._id === servicerequest._id}" ng-repeat="_servicerequest in servicerequests" title="{{_servicerequest.description}}" style="border-left: 2px solid {{_servicerequest.priority.color || '#f3c111'}}">
                         <div class="list-left">
                             <span class="w-40 avatar circle">
-                                <letter-avatar title="Status & Area" 
-                                data="{{_servicerequest.jurisdiction.name}}" 
+                                <letter-avatar title="Status & Area"
+                                data="{{_servicerequest.jurisdiction.name}}"
                                     height="60" width="60" shape="round"
                                     color="{{_servicerequest.status.color}}">
                                 </letter-avatar>
@@ -34,7 +34,7 @@
                                 {{_servicerequest.createdAt  | date:'dd MMM yyyy HH:mm'}}
                             </span>
                             <div class="item-title">
-                                <a href="#" class="_500">{{_servicerequest.service.name}} 
+                                <a href="#" class="_500">{{_servicerequest.service.name}}
                                 <br/><span title="Issue Number" class="font-size-12">
                                 #{{_servicerequest.code}}</span></a>
                             </div>
@@ -58,7 +58,7 @@
         <div class="btn-group pull-right list-pager" uib-pager ng-show="willPaginate()" total-items="$parent.total" ng-model="$parent.page" items-per-page="$parent.limit" ng-change="find(query)" template-url="views/_partials/list_pager.html" style="padding-left: 12px;" role="group">
         </div>
         <div class="btn-group pull-right">
-            <a title="Click To Refresh Issues" ng-click="load({ resolvedAt: null, operator: { $ne: null }, resetPage:true, reset:true}, false)" class="btn btn-default btn-xs">
+            <a title="Click To Refresh Issues" ng-click="load({}, false)" class="btn btn-default btn-xs">
                 <i class="icon-reload"></i>
             </a>
             <a title="Click To Export Issues" class="btn btn-default btn-xs" ng-csv="export" csv-header="['Issue Number','Reported Date','Call Start Time', 'Call End Time','Call Duration(Minutes)', 'Call Duration(Seconds)', 'Reporter Name', 'Reporter Phone', 'Reporter Account', 'Operator', 'Area', 'Service Group', 'Service', 'Assignee', 'Description', 'Address', 'Status', 'Priority', 'Resolved Date', 'Time Taken(days)', 'Time Taken(hrs)', 'Time Taken(mins)', 'Time Taken(secs)']" filename="issues.csv">
