add empty state on performance report & ensure proper sorting on filters

--- a/app/views/dashboards/performance/index.html
+++ b/app/views/dashboards/performance/index.html
@@ -27,19 +27,19 @@
     <div class="app-body-inner">
 
         <!-- start jurisdiction summary and (ttr & att) -->
-        <ng-include src="'views/dashboards/performance/_partials/jurisdiction_summary.html'"></ng-include>
+        <ng-include ng-if="performances && performances.overall" src="'views/dashboards/performance/_partials/jurisdiction_summary.html'"></ng-include>
         <!-- end jurisdiction summary and (ttr & att) -->
 
         <!-- start overal and pipeline summary -->
         <div class="row no-gutter">
             <div class="col-xs-12 col-sm-6 col-md-6">
                 <!-- start of area overall summary -->
-                <ng-include src="'views/dashboards/performance/_partials/overall_summary.html'"></ng-include>
+                <ng-include ng-if="performances && performances.overall" src="'views/dashboards/performance/_partials/overall_summary.html'"></ng-include>
                 <!-- end of area overall summary -->
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6">
                 <!-- start area service pipeline -->
-                <ng-include src="'views/dashboards/performance/_partials/pipeline_summary.html'"></ng-include>
+                <ng-include ng-if="performances.statuses && performances.statuses.length > 0" src="'views/dashboards/performance/_partials/pipeline_summary.html'"></ng-include>
                 <!-- end area service pipeline -->
             </div>
         </div>
@@ -53,7 +53,7 @@
         <ng-include ng-if="performances.services  && performances.services.length > 0" src="'views/dashboards/performance/_partials/services_summary.html'"></ng-include>
         <!-- end services summary -->
 
-        <hr>
+        <!-- <hr> -->
         <div class="padding" style="display: none">
             <!-- start of leader's board section -->
             <div class="row m-t-lg">
@@ -70,6 +70,17 @@
             </div>
             <!-- end of leader's board section -->
         </div>
+
+        <!-- start no data description -->
+        <div ng-if="!performances.overall" class="row-col h-v">
+            <div class="row-cell v-m">
+                <div class="text-center col-sm-6 offset-sm-3 p-y-lg">
+                    <p class="text-muted m-y-lg">No Data Found. Please update your filters.</p>
+                    <button ng-click="showFilter()" class="btn btn-outline b-grey text-grey" title="Click to update filters">Update Filters</button>
+                </div>
+            </div>
+        </div>
+        <!-- end no data description -->
 
     </div>
 </div>
