--- a/app/views/dashboards/_partials/overviews_filter.html
+++ b/app/views/dashboards/_partials/overviews_filter.html
@@ -41,7 +41,7 @@
             </h6>
           </div>
         </div>
-        <div class="col-md-3" ng-repeat="jurisdiction in jurisdictions">
+        <div class="col-md-3" ng-repeat="jurisdiction in jurisdictions | orderBy:'name'">
           <div class="checkbox-custom checkbox-primary p-a p-b-none">
             <input type="checkbox" checklist-model="filters.jurisdictions" checklist-value="jurisdiction._id">
             <label class="text-muted" title="{{jurisdiction.name}}">{{jurisdiction.name}}</label>
@@ -58,7 +58,7 @@
             </h6>
           </div>
         </div>
-        <div class="col-md-3" ng-repeat="servicegroup in servicegroups">
+        <div class="col-md-3" ng-repeat="servicegroup in servicegroups | orderBy:'name'">
           <div class="checkbox-custom checkbox-primary p-a p-b-none">
             <input type="checkbox" checklist-model="filters.servicegroups" checklist-value="servicegroup._id" checklist-change="filterServices()">
             <label class="text-muted" title="{{servicegroup.name}}">{{servicegroup.name}}</label>
@@ -75,7 +75,7 @@
             </h6>
           </div>
         </div>
-        <div class="col-md-3" ng-repeat="service in services">
+        <div class="col-md-3" ng-repeat="service in services | orderBy:'name'">
           <div class="checkbox-custom checkbox-primary p-a p-b-none">
             <input type="checkbox" checklist-model="filters.services" checklist-value="service._id">
             <label class="text-muted" title="{{service.name}}">{{service.name}}</label>
@@ -92,7 +92,7 @@
             </h6>
           </div>
         </div>
-        <div class="col-md-2" ng-repeat="status in statuses">
+        <div class="col-md-2" ng-repeat="status in statuses | orderBy:'weight'">
           <div class="checkbox-custom checkbox-primary p-a">
             <input type="checkbox" checklist-model="filters.statuses" checklist-value="status._id">
             <label class="text-muted" title="{{status.name}}">{{status.name}}</label>
@@ -109,7 +109,7 @@
             </h6>
           </div>
         </div>
-        <div class="col-md-2" ng-repeat="priority in priorities">
+        <div class="col-md-2" ng-repeat="priority in priorities | orderBy:'weight'">
           <div class="checkbox-custom checkbox-primary p-a">
             <input type="checkbox" checklist-model="filters.priorities" checklist-value="priority._id">
             <label class="text-muted" title="{{priority.name}}">{{priority.name}}</label>
