--- a/app/views/dashboards/_partials/performances_filter.html
+++ b/app/views/dashboards/_partials/performances_filter.html
@@ -41,17 +41,12 @@
                         </h6>
                     </div>
                 </div>
-                <div class="col-md-3" ng-repeat="jurisdiction in jurisdictions">
+                <div class="col-md-3" ng-repeat="jurisdiction in jurisdictions | orderBy:'name'">
                     <label class="md-check text-muted p-a p-b-none" title="{{jurisdiction.name}}">
                         <input type="radio" name="radio" checked="" class="has-value" ng-model="filters.jurisdictions" ng-value="jurisdiction._id">
                         <i class="blue"></i>
                         {{jurisdiction.name}}
                       </label>
-                    <!-- <div class="checkbox-custom checkbox-primary p-a p-b-none">
-                        <input type="radio" name="radio" ng-model="filters.jurisdictions" ng-value="jurisdiction._id">
-                        <input type="checkbox" checklist-model="filters.jurisdictions" checklist-value="jurisdiction._id">
-                        <label class="text-muted" title="{{jurisdiction.name}}">{{jurisdiction.name}}</label>
-                    </div> -->
                 </div>
             </div>
             <!-- end jurisdiction filters -->
