--- a/app/views/servicerequests/_partials/create.html
+++ b/app/views/servicerequests/_partials/create.html
@@ -51,9 +51,10 @@
                                 </div>
                                 <div class="row m-b">
                                     <div class="col-sm-1" ng-repeat="method in methods">
-                                        <div class="radio-custom radio-primary">
-                                            <input type="radio" ng-model="servicerequest.method.name" ng-value="method" name="method">
-                                            <label class="text-muted" title="Method of Communication used by Reporter">{{method}}</label>
+                                        <div>
+                                          <label class="md-check text-muted" title="Method of Communication used by Reporter">
+                                            <input type="radio" ng-model="servicerequest.method.name" ng-value="method" name="method"> <i class="blue"></i> {{method}}
+                                          </label>
                                         </div>
                                     </div>
                                 </div>
