fix height for performance pipeline summary cards

--- a/app/views/dashboards/performance/_partials/pipeline_summary.html
+++ b/app/views/dashboards/performance/_partials/pipeline_summary.html
@@ -55,7 +55,7 @@
 
                 <!-- start open -->
                 <div ng-repeat="status in performances.statuses" class="col-xs-6 col-sm-3 b-r b-b" title="{{status.name}} Service Requests">
-                    <div> <!--class="padding"-->
+                    <div class="padding">
                         <div class="text-center">
                             <h2 class="text-center _600 m-t-md">
                                 {{status.count}}
